add seed script

--- a/.env.test
+++ b/.env.test
@@ -1,2 +1,2 @@
 
-DATABASE_URL="postgresql://db:db@db/data" # lol this is increadible
+DATABASE_URL="postgresql://db:db@db/data" # lol this is incredible
