--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.0.18",
 		"@prisma/client": "5.15.1",
-		"prisma": "^5.15.1"
+		"prisma": "^5.15.1",
+		"tsx": "^4.15.6",
+		"zod": "^3.23.8"
 	}
 }
