--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
 		"@fontsource-variable/inter": "^5.0.18",
 		"@prisma/client": "5.15.1",
 		"prisma": "^5.15.1",
+		"svelte-french-toast": "^1.2.0",
 		"tsx": "^4.15.6",
 		"zod": "^3.23.8"
 	}
