--- a/package.json
+++ b/package.json
@@ -41,10 +41,12 @@
 	"type": "module",
 	"dependencies": {
 		"@fontsource-variable/inter": "^5.0.18",
+		"@iconify-json/ph": "^1.1.13",
 		"@prisma/client": "5.15.1",
 		"prisma": "^5.15.1",
 		"svelte-french-toast": "^1.2.0",
 		"tsx": "^4.15.6",
+		"unplugin-icons": "^0.19.0",
 		"zod": "^3.23.8"
 	}
 }
