--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"test:unit": "vitest"
 	},
 	"devDependencies": {
+		"@faker-js/faker": "^8.4.1",
 		"@playwright/test": "^1.28.1",
 		"@sveltejs/adapter-auto": "^3.0.0",
 		"@sveltejs/kit": "^2.0.0",
